--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "axios": "^0.19.0",
     "element-ui": "^2.13.0",
+    "lib-flexible": "^0.3.2",
     "mint-ui": "^2.2.13",
+    "postcss-px2rem-exclude": "0.0.6",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -65,7 +67,7 @@
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
     "sass": "^1.23.7",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^7.3.1",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
